# Text-Editor

./: CMakeLists.txt  cmake.bat
Source/: main.cpp
